# INST414-Project

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: directory_file_descriptions.md  index.md
testing_correlation/: __init__.py  config.py  correlation.py  dataset.py  features.py  main.py  plots.py
testing_correlation/modeling/: predict.py  train.py
tests/: test_data.py
