[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "testing_correlation"
version = "0.0.1"
description = "A quantitative social science research project exploring the linear relationships between the amount of education an individual recieves and their income level."
authors = [
  { name = "amisiyas_seyoum" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["testing_correlation"]
force_sort_within_sections = true


